--- a/goatlist.html
+++ b/goatlist.html
@@ -254,7 +254,7 @@
       }
 
       async function check() {
-        const walletInput = document.getElementById('');
+        const walletInput = document.getElementById('wallet');
         const wallet = walletInput.value;
         const resultElement = document.getElementById('result');
         const shareLinkElement = document.getElementById('gl-success-share');
