--- a/goatlist.html
+++ b/goatlist.html
@@ -327,7 +327,7 @@
 
 
       async function getBtcmUrl() {
-        const response = await fetch("/scription.json");
+        const response = await fetch("https://ordinalsgoatclub.com/scription.json");
         const data = await response.json();
         return data.url;
       }
