--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link rel="shortcut icon" href="https://www.ordinalsgoatclub.com/favicon.ico">
-  <style type="text/CSS">@font-face {font-family:"Courier Prime";font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/courierprime/v7/u-450q2lgwslOqpF_6gQ8kELawFpWg.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}html,body{background-color:#ffffff;font-family:"Courier Prime";font-size:12px;color:#404040;text-align:center;padding:0;margin:0;}body{display:flex;flex-direction:column;min-height:100vh;}h1,h2,h3{margin:0; padding:0 0 12px 0; font-weight:bold;}h1{font-size:16px;line-height:20px;}h2{font-size:12px;line-height:16px;}p{margin:0;padding:0 0 12px 0;}#main{padding:20px;margin:auto;max-width:450px;}#logo{width:100%;max-width:450px;margin-bottom:5px;}#addr-inp,#tw-inp{border:0;padding:10px 5px;width:auto;box-shadow:none;margin:0;text-align:center;width:100%;border: 1px solid #de8418;}#addr-inp,#tw-inp:focus{border-color: #f6931a;outline: none;} #addr-inp.error,#tw-inp.error{border:1px solid #cc3333;}.input-button{display: flex; flex-direction: row;}.p-top-padding{padding-top: 10px;}.thanks{font-size: 10px;}.continue{display:flex;align-self: center; background-color:#f7931a;color:#ffffff;padding:12px 16px 12px;border:0;cursor:pointer;text-decoration:none;}.continue:hover{background-color:#de8418;}.continue.disabled{background-color: #f6931a;}.continue.disabled:hover{background-color:#de8418;}.continue-big{display:flex;align-self: center; background-color:#f7931a;color:#ffffff;padding:16px 16px 16px;border:0;cursor:pointer;text-decoration:none;}.continue-big:hover{background-color:#de8418;}.continue-big.disabled{background-color: #f6931a;}.continue-big.disabled:hover{background-color:#de8418;} #steps{min-height:30vh;}.step.hidden{display:none;}.twitter{color:#f7931a;}#tweet-url{width:100%;height:40px;font-size:10px;text-align:center;border-color: #f6931a;}#tweet-url:focus{border-color: #f6931a;outline: none;}@media  screen and (min-width: 500px){h1{font-size:20px;line-height:30px;}h2{font-size:14px;line-height:20px;}#main{padding:40px;}#btcm-addr-inp{margin-top:5px;}}</style>
+    <style type="text/CSS">@font-face {font-family:"Courier Prime";font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/courierprime/v7/u-450q2lgwslOqpF_6gQ8kELawFpWg.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}html,body{background-color:#ffffff;font-family:"Courier Prime";font-size:12px;color:#404040;text-align:center;padding:0;margin:0;}body{display:flex;flex-direction:column;min-height:100vh;}h1,h2,h3{margin:0; padding:0 0 12px 0; font-weight:bold;}h1{font-size:16px;line-height:20px;}h2{font-size:12px;line-height:16px;}p{margin:0;padding:0 0 12px 0;}#main{padding:20px;margin:auto;max-width:450px;}#logo{width:100%;max-width:450px;margin-bottom:5px;}#addr-inp,#tw-inp{border:0;padding:10px 5px;width:auto;box-shadow:none;margin:0;text-align:center;width:100%;border: 1px solid #de8418;}#addr-inp,#tw-inp:focus{border-color: #f6931a;outline: none;} #addr-inp.error,#tw-inp.error{border:1px solid #cc3333;}.input-button{display: flex; flex-direction: row;}.p-top-padding{padding-top: 10px;}.thanks{font-size: 10px;}.continue{display:flex;align-self: center; background-color:#f7931a;color:#ffffff;padding:12px 16px 12px;border:0;cursor:pointer;text-decoration:none;}.continue:hover{background-color:#de8418;}.continue.disabled{background-color: #f6931a;}.continue.disabled:hover{background-color:#de8418;}.continue-big{display:flex;align-self: center; background-color:#f7931a;color:#ffffff;padding:16px 16px 16px;border:0;cursor:pointer;text-decoration:none;}.continue-big:hover{background-color:#de8418;}.continue-big.disabled{background-color: #f6931a;}.continue-big.disabled:hover{background-color:#de8418;} #steps{min-height:30vh;}.step.hidden{display:none;}.twitter{color:#f7931a;}#tweet-url{width:100%;height:40px;font-size:10px;text-align:center;border-color: #f6931a;}#tweet-url:focus{border-color: #f6931a;outline: none;}@media  screen and (min-width: 500px){h1{font-size:20px;line-height:30px;}h2{font-size:14px;line-height:20px;}#main{padding:40px;}#btcm-addr-inp{margin-top:5px;}}</style>
 </head>
 
 <body>
@@ -18,14 +18,14 @@
         <p>Enter your Ordinals Wallet</p>
         <div class="input-button">
           <input type="text" id="addr-inp" placeholder="bc1p..." />
-          <a href="javascript:;" class="continue disabled" id="continue-1">Continue</a>
+          <a href="javascript:;" class="continue" id="continue-1">Continue</a>
         </div>
       </div>
       <div id="step-2" class="step hidden">
         <p>Enter your Twitter handle</p>
         <div class="input-button">
           <input type="text" id="tw-inp" placeholder="@" />
-          <a href="javascript:;" class="continue disabled" id="continue-2">Continue</a>
+          <a href="javascript:;" class="continue" id="continue-2">Continue</a>
         </div>
       </div>
       <div id="step-3" class="step hidden">
@@ -41,6 +41,10 @@
         <p>Your application has been submitted - If we DM you, you are officially Goated!.</p>
         <p><strong>Follow <a href="https://twitter.com/ordinalgoatclub" target="_blank" style="text-decoration: none;"><strong class="twitter">@ordinalgoatclub</strong></a> and turn on notifications to stay updated!</strong></p>
         <p class="thanks">🧡</p>
+      </div>
+      <div id="step-5" class="step hidden">
+        <h2>Wallet Not Found</h2>
+        <p>The provided wallet is not in the list of approved wallets.</p>
       </div>
     </div>
     <script src="script.js"></script>
