--- a/index.html
+++ b/index.html
@@ -6,7 +6,181 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link rel="shortcut icon" href="https://www.ordinalsgoatclub.com/favicon.ico">
-  <style type="text/CSS">@font-face {font-family:"Courier Prime";font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/courierprime/v7/u-450q2lgwslOqpF_6gQ8kELawFpWg.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}html,body{background-color:#ffffff;font-family:"Courier Prime";font-size:12px;color:#404040;text-align:center;padding:0;margin:0;}body{display:flex;flex-direction:column;min-height:100vh;}h1,h2,h3{margin:0; padding:0 0 12px 0; font-weight:bold;}h1{font-size:16px;line-height:20px;}h2{font-size:12px;line-height:16px;}p{margin:0;padding:0 0 12px 0;}#main{padding:20px;margin:auto;max-width:450px;}#logo{width:100%;max-width:450px;margin-bottom:5px;}#addr-inp,#tw-inp{border:0;padding:10px 5px;width:auto;box-shadow:none;margin:0;text-align:center;width:100%;border: 1px solid #de8418;}#addr-inp,#tw-inp:focus{border-color: #f6931a;outline: none;} #addr-inp.error,#tw-inp.error{border:1px solid #cc3333;}.input-button{display: flex; flex-direction: row;}.p-top-padding{padding-top: 10px;}.thanks{font-size: 10px;}.continue{display:flex;align-self: center; background-color:#f7931a;color:#ffffff;padding:12px 16px 12px;border:0;cursor:pointer;text-decoration:none;}.continue:hover{background-color:#de8418;}.continue.disabled{background-color: #f6931a;}.continue.disabled:hover{background-color:#de8418;}.continue-big{display:flex;align-self: center; background-color:#f7931a;color:#ffffff;padding:16px 16px 16px;border:0;cursor:pointer;text-decoration:none;}.continue-big:hover{background-color:#de8418;}.continue-big.disabled{background-color: #f6931a;}.continue-big.disabled:hover{background-color:#de8418;} #steps{min-height:30vh;}.step.hidden{display:none;}.twitter{color:#f7931a;}#tweet-url{width:100%;height:40px;font-size:10px;text-align:center;border-color: #f6931a;}#tweet-url:focus{border-color: #f6931a;outline: none;}@media  screen and (min-width: 500px){h1{font-size:20px;line-height:30px;}h2{font-size:14px;line-height:20px;}#main{padding:40px;}#btcm-addr-inp{margin-top:5px;}}</style>
+  <style>
+    html,
+    body {
+      background-color: #ffffff;
+      font-size: 12px;
+      color: #404040;
+      text-align: center;
+      padding: 0;
+      margin: 0;
+    }
+
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+      padding: 0;
+      font-family: "Courier New";
+      flex-direction: column;
+      text-align: center;
+    }
+
+    #main {
+      padding: 20px;
+      margin: auto;
+      max-width: 350px
+    }
+
+    h1,
+    h2,
+    h3 {
+      margin: 0;
+      padding: 0 0 14px 0;
+      font-weight: bold;
+    }
+
+    h1 {
+      font-size: 16px;
+      line-height: 18px;
+    }
+
+    h2 {
+      font-size: 12px;
+      line-height: 14px;
+    }
+
+    p {
+      margin: 0;
+      padding: 0 0 12px 0;
+    }
+
+    .wl-success {
+      color: green;
+    }
+
+    .wl-error {
+      color: red;
+    }
+
+    #container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid #ccc;
+      padding: 20px;
+      background: #fff;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    .top-image {
+      max-width: 350px;
+      border-radius: 10px;
+    }
+
+    .tab-button {
+      background-color: transparent;
+      border: none;
+      margin: 10px 0px;
+      font-size: 14px;
+      color: #c94108;
+    }
+
+    .active-tab {
+      font-weight: bold;
+      border: 1px solid #c94108;
+      border-radius: 5px;
+      padding: 5px 20px;
+      color: white;
+      background-color: #c94108;
+    }
+
+    .tab-view {
+      max-width: 550px;
+      text-align: center;
+    }
+
+    .input-button {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
+
+    .col-share-twitter {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .input {
+      padding: 10px 5px;
+      width: auto;
+      box-shadow: none;
+      margin: 0;
+      text-align: center;
+      width: 100%;
+      border: 1px solid #c94108;
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+    }
+
+    .input:focus {
+      border-color: #c94108;
+      outline: none;
+    }
+
+    .check-button {
+      display: flex;
+      align-self: center;
+      background-color: #c94108;
+      color: #ffffff;
+      padding: 12px 16px 12px;
+      border: 0;
+      cursor: pointer;
+      text-decoration: none;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+
+    .check-button-padding {
+      display: flex;
+      align-self: center;
+      background-color: #c94108;
+      color: #ffffff;
+      padding: 25px 16px 25px;
+      border: 0;
+      cursor: pointer;
+      text-decoration: none;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+
+    .wl-result {
+      margin-top: 10px;
+      font-weight: bold;
+      font-size: 14px;
+    }
+
+    .text-area {
+      width: 100%;
+      min-height: 60px;
+      border: 1px solid #c94108;
+    }
+
+    .error-text {
+      color: red;
+      margin-top: 10px;
+      font-size: 14px;
+      font-weight: bold;
+    }
+  </style>
 
 </head>
 
