--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <p>The provided wallet is not in the list of approved wallets.</p>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="https://www.ordinalsgoatclub.com/script.js"></script>
   </div>
 </body>
 
