--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                   var walletAddress = document.getElementById("applyWalletAddressInput").value;
                   var applyResult = document.getElementById("applyResult");
                   var tweetTextarea = document.getElementById("tweetTextarea");
-                  var tweetText = `I'm pledging for the @ordinalgoatclub Goatlist! There is no mountain we cant climb and together, we are the Greatest of All Times. My Ordinal Address is: ${walletAddress}You can pledge here: ${document.location.href}`;
+                  var tweetText = `I'm pledging for the @ordinalgoatclub Goatlist for a #freemint! Why? Because There is no mountain we cant climb and Together, we are the Greatest of All Times. My Ordinal Address is: ${walletAddress} You can pledge here: ${document.location.href}`;
             
                   // Set the tweet text in the textarea
                   tweetTextarea.value = tweetText;
