--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <title>Ordinal Tamarins - Whitelist</title>
+  <title>Ordinals Goat Club - Goatlist</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <link rel="shortcut icon" href="https://www.ordinaltamarins.com/favicon.ico">
+  <link rel="shortcut icon" href="https://www.ordinalsgoatclub.com/favicon.ico">
   <style>
     html,
     body {
@@ -199,7 +199,7 @@
                     <p>Please enter your wallet address below to pledge for the Goatlist:</p>
                     <div class="input-button">
                       <input type="text" id="applyWalletAddressInput" class="input" placeholder="Enter wallet address" />
-                      <button id="applyWhitelistButton" class="check-button">Apply</button>
+                      <button id="applyWhitelistButton" class="check-button">Pledge</button>
                     </div>
                     <div class="result" id="applyResult"></div>
                     <textarea id="tweetTextarea" class="tweet-textarea" placeholder="Copy and paste the application tweet here"></textarea>
