--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 <body>
         <div id="main">
                 <h1>Ordinals Goat Club - Goatlist</h1>
+                <img src="banner.png" width="350">
                 <div id="container">
                   <div id="tab-buttons">
                     <button id="checkButton" class="tab-button active-tab">Check Goatlist</button>
