--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -229,7 +229,7 @@
                     .then((wallets) => {
                       // Check if the entered address is in the wallets array
                       if (wallets.includes(walletAddress.toLowerCase())) {
-                        checkResult.innerHTML = "<p class='wl-success'>Congratulations! You are on the exclusive Whitelist for 1 free mint and will automatically be added to the whitelist for discounted mint price. Thanks! </p>";
+                        checkResult.innerHTML = "<p class='wl-success'>Congratulations! You are on the exclusive Whitelist for 5 discounted mints. Thanks! </p>";
                       } else {
                         checkResult.innerHTML = "<p class='wl-error'>Sorry, your address is not Whitelisted.</p>";
                       }
