--- a/whitelist/index.html
+++ b/whitelist/index.html
@@ -245,7 +245,7 @@
                   var walletAddress = document.getElementById("applyWalletAddressInput").value;
                   var applyResult = document.getElementById("applyResult");
                   var tweetTextarea = document.getElementById("tweetTextarea");
-                  var tweetText = `I'm pledging for the @ordinalgoatclub Whitelist for a #freemint! Why? Because We are the Greatest of All Times & There is no mountain we cant climb. My Ordinal Address is: ${walletAddress} You can pledge here: ${document.location.href}`;
+                  var tweetText = `I'm pledging for the @ordinalgoatclub Whitelist for a discount mint! Why? Because We are the Greatest of All Times & There is no mountain we cant climb. My Ordinal Address is: ${walletAddress} You can pledge here: ${document.location.href}`;
             
                   // Set the tweet text in the textarea
                   tweetTextarea.value = tweetText;
